# suumo

./: .pre-commit-config.yaml  Cargo.toml  README.md  justfile
src/: main.rs
src/common/: cli.rs  error.rs  tracing.rs
